LU-3181 mdt: mdt_cross_open should allow open by FID on MDT1

Removed the check of fid_is_obf() in mdt_cross_open() to allow
opening by FIDs on MDT1.

Signed-off-by: Swapnil Pimpale <spimpale@ddn.com>
Change-Id: I0a2e470137c99d75a7af01a03041de72c84d2771
Reviewed-on: http://review.whamcloud.com/8738
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Tested-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: wangdi <di.wang@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>